--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start":"parcel index.html",
     "build":"parcel build index.html",
-    "test": "jest",
+    "test": "jest"
      
 
   },
