--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "accordionapp",
   "version": "1.0.0",
   "description": "My react app",
-  "main": "index.html",
+  "main": "App.js",
   "scripts": {
     "start":"parcel index.html",
     "build":"parcel build index.html",
