Update package.json main

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "My react app",
   "main": "App.js",
   "scripts": {
-    "start":"parcel index.html",
-    "build":"parcel build index.html",
+    "start":"parcel App.js",
+    "build":"parcel build App.js",
     "test": "jest"
      
 
