--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "accordionapp",
   "version": "1.0.0",
   "description": "My react app",
-  "main": "App.js",
+  "main": "index.js",
   "scripts": {
-    "start":"parcel App.js",
-    "build":"parcel build App.js",
+    "start":"parcel index.html",
+    "build":"parcel build index.html",
     "test": "jest"
      
 
@@ -17,7 +17,7 @@
     "parcel": "^2.10.3",
     "postcss": "^8.0.0",
     "autoprefixer": "^10.0.0",
-    "process": "^0.11.10"
+   
   },
   "dependencies": {
     "react": "^18.2.0",
